--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,11 +1,7 @@
-/* 
+.Principal{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 50px;
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+}
